style : fix overflow due to searchbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
 
 body {
   background-color: #111;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .navbar {
